# cpp-guards

./: .travis.yml  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: FindGMock.cmake  FindGTest.cmake  Install.cmake
include/guards/: Guards.h  ScopeGuard.h  TransactionGuard.h
script/: ci_build.sh  travis_install.sh
test/: CMakeLists.txt  ScopeGuardTest.cpp  TestCommon.h  TransactionGuardTest.cpp
